--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-24  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Fixed wrong translations.
+
 2009-03-18  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic translation by Djihed Afifi.
