--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-24  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Fixed wrong translations.
+
 2009-03-14  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek Translation by Jennie Petoumenou.
