reviewed by: Johannes Schmid <jhs@gnome.org>
2009-04-16  Joel Holdsworth <joel@airwebreathe.org.uk>

	reviewed by: Johannes Schmid  <jhs@gnome.org>

	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_remove):
  #578967 – gdl_dock_item_grip_remove must be implemented	

svn path=/trunk/; revision=551

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-04-16  Joel Holdsworth <joel@airwebreathe.org.uk>
 
+	reviewed by: Johannes Schmid  <jhs@gnome.org>
+
+	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_remove):
+  #578967 – gdl_dock_item_grip_remove must be implemented	
+
+2009-04-16  Joel Holdsworth <joel@airwebreathe.org.uk>
+
   reviewed by: Johannes Schmid  <jhs@gnome.org>
 	* docs/reference/gdl-sections.txt:
 	* gdl/Makefile.am:
