Marked po/ChangeLog as obsolete

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+This is the end of the ChangeLog, please use git log instead
+
 2009-03-24  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
 	* ja.po: Fixed wrong translations.
