--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Provides docking features for gtk+. Currently used by anjuta and lumiera.
 Discussion of GDL development takes place on the gnome-devtools@gnome.org or
 anjuta-devel@lists.sf.net mailing list and on #anjuta at irc.gnome.org.
 
-GDL is licensed under the terms of the GPL.
+GDL is licensed under the terms of the LGPL.
